@@ -4,6 +4,9 @@
 
 30-Jul-2004
 ~~~~~~~~~~~
+Updated some calls to use newer APIs, and allow compilation on systems where
+deprecated widgets are disabled by default (reported by Vincent Lefèvre and
+Guido Schimmels).
 Bugfix: Panel icons were no longer shown highlighted when selected.
 
 23-Jul-2004
